fix typos in session 3

--- a/session3/session_3slides.html
+++ b/session3/session_3slides.html
@@ -1579,9 +1579,9 @@ Robert Ashmead
 <section id="adding-a-leaflet-map-to-our-app" class="slide level2">
 <h2>Adding a Leaflet Map to Our App</h2>
 <ul>
-<li><code>renderLeaflet()</code> and</li>
-<li>Add a Map feature as</li>
-<li>Show the counts of total arrests, and arrests pea new page to our appr prosecution degree for each county</li>
+<li><code>renderLeaflet()</code> and <code>leafletOutput()</code></li>
+<li>Add a Map feature as a new page</li>
+<li>Show the counts of total arrests, and arrests per prosecution degree for each county</li>
 <li>What do we need to do?
 <ul>
 <li>Load the map data</li>
