add final assignment and minor html updates

--- a/session4/session_4slides.html
+++ b/session4/session_4slides.html
@@ -1341,7 +1341,7 @@ Robert Ashmead
 </section>
 <section id="option-1---open-source-shiny-server" class="slide level2">
 <h2>Option 1 - Open Source Shiny Server</h2>
-<p>Posit’s <a href="https://posit.co/download/shiny-server/">open source shiny server</a> is way to freely host a app. This could a server on premises or something like a Amazon AWS server.</p>
+<p>Posit’s <a href="https://posit.co/download/shiny-server/">open source shiny server</a> is way to freely host an app. This could a server on premises or something like a Amazon AWS server.</p>
 <ul>
 <li>Positives
 <ul>
@@ -1641,6 +1641,16 @@ Robert Ashmead
 </ul></li>
 </ul></li>
 </ol>
+</section>
+<section id="final-assignment" class="slide level2">
+<h2>Final Assignment</h2>
+<ul>
+<li>Practice your R-Shiny skills and understanding</li>
+<li>Receive a certificate from JIRN</li>
+<li>NIJ’s Recidivism Challenge Full Dataset</li>
+<li>Due by 4/5/2025</li>
+<li>See HTML on the github page</li>
+</ul>
 </section>
 <section id="questionsnext-session" class="slide level2">
 <h2>Questions/Next Session</h2>
