--- a/final_assignment/Final_Assignment.html
+++ b/final_assignment/Final_Assignment.html
@@ -3018,7 +3018,7 @@ vertical-align: -.125em;
 </section>
 <section id="puma-data-tips" class="level2">
 <h2 class="anchored" data-anchor-id="puma-data-tips">PUMA Data Tips</h2>
-<p>The variable in the data named <code>Residence_PUMA</code> does not have not actual PUMA codes but is instead aggregates of PUMAs described here <a href="https://nij.ojp.gov/funding/recidivism-forecasting-challenge#21-0">https://nij.ojp.gov/funding/recidivism-forecasting-challenge#21-0</a>. See the script <code>using_puma_var.R</code> and crosswalk <code>puma_crosswalk.csv</code> in the “final assignment” folder of the github material for help and an example to match those codes to to PUMAs in shapefiles. If you would additionally like to find some population data about the PUMAs, look for tables at <a href="https://data.census.gov">data.census.gov</a>.</p>
+<p>The variable in the data named <code>Residence_PUMA</code> does not have actual PUMA codes but is instead aggregates of PUMAs described here <a href="https://nij.ojp.gov/funding/recidivism-forecasting-challenge#21-0">https://nij.ojp.gov/funding/recidivism-forecasting-challenge#21-0</a>. See the script <code>using_puma_var.R</code> and crosswalk <code>puma_crosswalk.csv</code> in the “final assignment” folder of the github material for help and an example to match those codes to PUMAs in shapefiles. If you would additionally like to find some population data about the PUMAs, look for tables at <a href="https://data.census.gov">data.census.gov</a>.</p>
 </section>
 <section id="requirements" class="level2">
 <h2 class="anchored" data-anchor-id="requirements">Requirements</h2>
